Aggiunto input v-model

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="root">
         <h1>{{message}}</h1>
         <i class="fab fa-vuejs"></i>
+        <input v-model= "name" placeholder="Inserisci nome">
+        <p>{{name}}</p>
         <a href="https://vuejs.org/"  target="_blank">GET STARTED</a>
         <img v-bind:src="image" alt="">
     </div>
