--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div id="root">
         <h1>{{message}}</h1>
-        <i class="fab fa-vuejs"></i>
-        <input v-model= "name" placeholder="Inserisci nome">
+        <input v-model= "name" placeholder="Nome">
         <p>{{name}}</p>
+        <i class="fab fa-vuejs"></i>
         <a href="https://vuejs.org/"  target="_blank">GET STARTED</a>
         <img v-bind:src="image" alt="">
     </div>
